--- a/first_app/Gemfile
+++ b/first_app/Gemfile
@@ -1,11 +1,11 @@
 source 'http://rubygems.org'
 
-gem 'rails', '3.0.9'
+gem 'rails', '3.0.11'
 
 # Bundle edge Rails instead:
 # gem 'rails', :git => 'git://github.com/rails/rails.git'
 
-gem 'sqlite3'
+gem 'sqlite3', '1.3.3', :group => :development
 
 # Use unicorn as the web server
 # gem 'unicorn'
